[gd_scene load_steps=2 format=3 uid="uid://n3qds18fabsn"]

[ext_resource type="Script" uid="uid://ccs4n8wx8a2fg" path="res://scenes/main_menu/main_menu.gd" id="1_yl4tm"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yl4tm")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -264.0
offset_top = -186.0
offset_right = 264.0
offset_bottom = 186.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 24

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 96
text = "Dice Game"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Panel" type="Panel" parent="VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="NewGameButton" type="Button" parent="VBoxContainer/MarginContainer/MarginContainer2/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(512, 96)
layout_mode = 2
size_flags_vertical = 4
text = "Start Run"

[node name="Button" type="Button" parent="VBoxContainer/MarginContainer/MarginContainer2/VBoxContainer"]
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
size_flags_horizontal = 4
text = "Options"

[node name="QuitButton" type="Button" parent="VBoxContainer/MarginContainer/MarginContainer2/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
size_flags_horizontal = 4
text = "Quit"

[connection signal="pressed" from="VBoxContainer/MarginContainer/MarginContainer2/VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainer/MarginContainer2/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
